sauvegarde la ligne souhaitée